@@ -14,7 +14,7 @@ BEGIN {
   }
 }
 
-plan tests => 96;
+plan tests => 97;
 
 {
   my @nums;
@@ -323,6 +323,13 @@ is( nth_prime(10001), 104743, "nth_prime(10001)");
   }
   my @expect = split(/\|/, "1 -|2 1|3 2|4 3|5 2 3|6 5|7 3 5|8 -|9 2 5|10 3 7|11 2 6 7 8|12 -|13 2 6 7 11|14 3 5|15 -|16 -|17 3 5 6 7 10 11 12 14|18 5 11|19 2 3 10 13 14 15|20 -|21 -|22 7 13 17 19|23 5 7 10 11 14 15 17 19 20 21|24 -|25 2 3 8 12 13 17 22 23|26 7 11 15 19|27 2 5 11 14 20 23|28 -|29 2 3 8 10 11 14 15 18 19 21 26 27|30 -|");
   is_deeply(\@s,\@expect,"znprimroot table 1..30");
+}
+
+##############################################################################
+
+{
+  my $checksum = vecreduce { $a ^ $b } @{twin_primes(1000000)};
+  is($checksum, 630871, "xor of twin primes <= 1M");
 }
 
 ##############################################################################
